<resources>
    <string name="app_name">RICOH Live Streaming Client THETA Sender</string>
    <string name="guide_save">Some items have not been saved.</string>
    <string name="save_config">Save</string>
    <string name="room_id">RoomID</string>
    <string name="log_level">LogLevel</string>
    <string name="room_id_is_empty">Room ID is empty.</string>
    <string name="room_id_has_been_changed">Room ID has been changed. Are you sure to continue without saving?</string>
    <string name="room_type">RoomType</string>
    <string name="sfu">SFU</string>
    <string name="sfu_large">SFU_Large</string>
    <string name="p2p">P2P</string>
    <string name="p2p_turn">P2P+Turn</string>
    <string name="live_streaming_state_label">LiveStreamingState</string>
    <string name="resolution_label">Resolution</string>
    <string name="current_resolution">Auto in progress</string>
    <string name="bitrate_label">Bitrate</string>
    <string name="current_bitrate">Auto in progress</string>
    <string name="change">Change</string>
    <string name="auto">Auto</string>
    <string name="audio">Audio</string>
    <string name="unmute">unmute</string>
    <string name="mute">mute</string>
    <string name="display_off">Display off</string>
    <string name="streaming_zenith_correction">Streaming zenith correction</string>
    <string name="take_picture_zenith_correction">TakePicture zenith correction</string>
    <string name="off">Off</string>
    <string name="on">On</string>
</resources>
