<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Guidance -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/guide_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/save_config"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_config"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Room ID -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_room_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_guide">

        <TextView
            android:id="@+id/text_room_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/room_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/text_room_id"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Log Level -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_log_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_room_id">

        <TextView
            android:id="@+id/text_log_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_level"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/log_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:entries="@array/spinner_log_level"
            android:spinnerMode="dropdown"
            app:layout_constraintLeft_toRightOf="@id/text_log_level"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Room Type -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:id="@+id/room_type_layout"
        app:layout_constraintTop_toBottomOf="@+id/layout_log_level">

        <TextView
            android:id="@+id/text_room_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/room_type_radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="@id/text_room_type"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside">

            <RadioButton
                android:id="@+id/room_type_sfu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:checked="true"
                android:text="@string/sfu" />

            <RadioButton
                android:id="@+id/room_type_p2p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/p2p" />

            <RadioButton
                android:id="@+id/room_type_p2p_turn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p2p_turn" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Live Streaming State -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/live_streaming_state_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/room_type_layout">

        <TextView
            android:id="@+id/live_streaming_state_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_streaming_state_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/live_streaming_state_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="IDLE"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toRightOf="@id/live_streaming_state_label"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Resolution -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resolution_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/live_streaming_state_layout">

        <TextView
            android:id="@+id/resolution_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resolution_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_resolution_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/resolution_label"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:id="@+id/resolution_change_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/change" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Bitrate -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bitrate_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/resolution_layout">

        <TextView
            android:id="@+id/bitrate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bitrate_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_bitrate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/bitrate_label"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:id="@+id/bitrate_change_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/change" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Audio Mute -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:id="@+id/audio_mute_layout"
        app:layout_constraintTop_toBottomOf="@+id/bitrate_layout">

        <TextView
            android:id="@+id/text_audio_mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/audio_mute_radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="@id/text_audio_mute"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside">

            <RadioButton
                android:id="@+id/audio_unmute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:checked="true"
                android:enabled="false"
                android:text="@string/unmute" />

            <RadioButton
                android:id="@+id/audio_mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:enabled="false"
                android:text="@string/mute" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Display off -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/display_off_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/audio_mute_layout">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:id="@+id/display_off_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/display_off" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Zenith correction -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:id="@+id/zenith_correction_layout"
        app:layout_constraintTop_toBottomOf="@+id/display_off_layout">

        <TextView
            android:id="@+id/text_zenith_correction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zenith_correction"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/zenith_correction_radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="@id/text_zenith_correction"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside">

            <RadioButton
                android:id="@+id/zenith_correction_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:checked="true"
                android:text="@string/off" />

            <RadioButton
                android:id="@+id/zenith_correction_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/on" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

